--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     <div class="numberClock">
                         <!-- Vaqtni son ko`rinishida chiqarish -->
                         <div class="hours">00</div>
-                        <div class="minutes">00</div>
+                        <div class="minutes">00</div>0
+                        
                     </div>
                 </div>
                 <!-- Uyga sekundomer -->
